--- a/style.css
+++ b/style.css
@@ -1,160 +1,253 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
+ @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap");
 
-:root{
-    --clr--gray-700:hsl(217, 19%, 35%);
-    --clr-gray-500:hsl(214, 17%, 51%);
-    --clr-gray-300:hsl(212, 23%, 69%);
-    --clr-gray-100:hsl(210, 46%, 95%);
+:root {
+    --dark-gray-blue: hsl(217, 19%, 35%);
+    --desaturated-blue: hsl(214, 17%, 51%);
+    --gray-blue: hsl(212, 23%, 69%);
+    --light-gray-blue: hsl(210, 46%, 95%);
 }
 
-
-*{
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
+    box-sizing: inherit;
+}
+
+html {
     box-sizing: border-box;
+    font-size: 62.5%;
+    height: 100%;
 }
 
-body{
-    background-color: var(--clr-gray-100);
-    font-size: 13px;
-    font-weight: 500;
-    min-height: 100vh;
-    font-family: 'Manrope', sans-serif;
-    display: grid;
-    place-items: center;
+body {
+    min-height: 100%;
+    padding: 0 2.4rem;
+    background: var(--light-gray-blue);
+    font-family: "Manrope", sans-serif;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-main{
-    max-width: 425px;
-        background: var(--card-bg);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto;
-        margin: 1.7rem;
-        border-radius: 0.5rem;
-        box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+main {
+    max-width: 32.7rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0px 40px 40px -10px rgba(201, 213, 225, 0.503415);
 }
 
-
-.card_section{
-    display: grid;
-    background-color: white;
-    border-radius: .5rem;
-}
-
-main .image_container{
+.image-container {
     overflow: hidden;
 }
 
-main .image_container img{
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-top-right-radius: 0.5rem;
-    border-top-left-radius: 0.5rem;
-    transition: all 0.5s linear;
+ .image-container img {
+     display: block;
+     width: 100%;
+     height: 100%;
+     border-top-right-radius: 0.5rem;
+     border-top-left-radius: 0.5rem;
+     transition: all 0.5s linear;
+ }
+
+  .image-container:hover>img {
+      transform: scale(1.2);
+  }
+
+
+
+.description {
+    padding: 4.2rem 3.1rem 2.2rem;
+    background: #ffff;
 }
 
-main .image_container img:hover{
-    transform: scale(1.2);
+h2 {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    padding-bottom: 1.3rem;
+    letter-spacing: 0.3px;
+    color: var(--dark-gray-blue);
 }
 
-.card_details{
-    padding: 2.5rem 2rem 1.5rem 2rem;
+.description p {
+    font-size: 1.2rem;
+    letter-spacing: 0.7px;
+    line-height: 1.6;
+    color: var(--desaturated-blue);
 }
 
-.card_title{
-    font-size: 1rem;
-    font-weight: 700;
-    color: var(--clr-gray-700);
-    margin-bottom: 1rem;
-    opacity: 0.6;
-}
-
-.card_description {
-    color: var(--clr-gray-500);
-    opacity: 0.8;
-    font-weight: 500;
-}
-
-
-.card_author{
-    margin-top: 40px;
+footer {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content:space-between;
+    position: relative;
+    background: #ffff;
+    padding: 1rem 3.2rem 2rem;
 }
 
-.author_profile{
-    width: 40px;
-    height: 40px;
+.author {
+    display: flex;
+}
+
+.author img {
+    height: 4rem;
+    width: 4rem;
     border-radius: 50%;
 }
 
-.author_details{
+.about {
+    padding-left: 1.5rem;
+    align-self: center;
+    font-size: 1.1rem;
+}
+
+h3 {
+    color: var(--dark-gray-blue);
+}
+
+time {
+    color: var(--gray-blue);
+    font-size: 1.2rem;
+}
+
+.arrow {
+    background: var(--light-gray-blue);
+    width: 3.2rem;
+    height: 3.2rem;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 10;
+    margin-top: 0.5rem;
+
     display: flex;
-    flex-direction: column;
-    margin-left: -1.2rem;
+    justify-content: center;
+    align-items: center;
 }
 
-
-.author_name{
-    font-size: 0.9rem;
-    font-weight: 700;
-    color: var(--clr-gray-700);
-    opacity: 0.7;
-}
-
-.author_date{
-    font-size: 0.8rem;
-    color: var(--clr-gray-500);
-    opacity: 0.7;
-    padding-top: 3px;
-}
-
-.card_author .share #share_icon{
-        display: block;
-        position: absolute;
-        bottom: 1.5rem;
-        right: 1.5rem;
-        width: auto;
-        background-color: var(--clr-gray-100);
-        padding: 0.5rem;
-        border-radius: 50%;
-        z-index: 1;
-        cursor: pointer;
-        transition: all 0.3s linear;
-}
-
-.card_author .share_links{
-    margin-left: -32px;
-    position: absolute;
+.share {
     display: flex;
     align-items: center;
-    gap: 1rem;
-    width: 325px;
-    height: 0%;
-    overflow: hidden;
-    background-color: var(--clr-gray-500);
-    z-index: 0;
-    transition: all 0.3s ease-in;
-    border-bottom-left-radius: 0.5rem;
-        border-bottom-right-radius: 0.5rem;
+    position: absolute;
+    background: var(--dark-gray-blue);
+    left: 0;
+    bottom: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    padding: 0 3.2rem;
+    border-bottom-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+    transition: all 0.3s ease-in-out;
 }
 
-.active .share_links{
-    height: auto;
-    padding: 1.5rem 2rem 1.75rem 2rem;
+.show {
+    visibility: visible;
+    opacity: 1;
 }
 
+.arrow:hover {
+    background: var(--gray-blue);
+}
 
-.share_links span {
+.arrow:active {
+    transform: scale(0.98);
+}
+
+.arrow:hover img {
+    filter: brightness(100);
+    transition: none;
+}
+
+.share p {
     text-transform: uppercase;
-    letter-spacing: 5px;
-    color: var(--clr-gray-300);
+    color: var(--gray-blue);
+    font-size: 1.2rem;
+    letter-spacing: 0.5rem;
+    padding-right: 2rem;
 }
 
-.share_links a:hover {
+ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+li {
+    padding-right: 1.5rem;
+}
+
+a img:hover {
     transform: scale(1.2);
 }
 
+@media screen and (min-width: 875px) {
+    main {
+        display: flex;
+        max-width: 73rem;
+        height: 27.7rem;
+        overflow: unset;
+    }
+
+    .image-container{
+        flex: 1;
+        border-radius: 1.5rem 0 0 1.5rem;
+        overflow: hidden;
+        height: 100%;
+    }
+
+    .image-container img{
+        border-radius: 1.5rem 0 0 1.5rem;
+    }
+
+    section {
+        flex: 1.6;
+    }
+
+    .description {
+        padding-left: 4.5rem;
+        padding-top: 3.2rem;
+        border-top-right-radius: 1.5rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+        line-height: inherit;
+    }
+
+    footer {
+        padding: 0 3.2rem 3.2rem 4.5rem;
+        border-bottom-right-radius: 1.5rem;
+    }
+
+    .arrow {
+        margin-right: 0.7rem;
+    }
+
+    h3 {
+        padding-bottom: 0.3rem;
+    }
+
+    .share {
+        top: -7.8rem;
+        left: 26.8rem;
+        height: 5.3rem;
+        border-radius: 1rem;
+        width: 24.5rem;
+        bottom: 10rem;
+    }
+
+    .share::after {
+        content: "";
+        position: absolute;
+        width: 1.6rem;
+        height: 1.6rem;
+        bottom: -0.8rem;
+        left: 50%;
+        transform: rotate(45deg);
+        background-color: #48556a;
+    }
+}
